Fetch stored image